--- a/public/css/splash.css
+++ b/public/css/splash.css
@@ -1,3 +1,17 @@
+@import url(http://fonts.googleapis.com/css?family=Vidaloka);
+h1,h2,h3 {
+   font-family: 'Vidaloka', serif;
+}
+
+body {
+   width: 60%;
+   margin: 0 auto;
+}
+
 .table {
    display: inline-block;
+}
+
+.passDice {
+   display: block;
 }
