--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,37 @@ body {
    margin: 20px auto;
 }
 
+.leftColumn {
+   display: inline-block;
+   width: 45%;
+}
+
+.diceSimulator {
+   height: 180px;
+   margin: 0 -10% 20px;
+   vertical-align: top;
+}
+
+.rightColumn {
+   display: inline-block;
+   width: 50%;
+   vertical-align: top;
+   padding-left: 3%;"
+}
+
+#gameStats {
+   display: inline-block;
+   width: 50%;
+   vertical-align: top;
+   min-height: 250px;
+}
+
+#gameButtons {
+   display: inline-block;
+   width:25%;
+   vertical-align: top;
+}
+
 h1 {
    color: white;
    font-size: 16px;
