Added more chip interactions
Can now bet with chips on everything except come and don't come bets

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,6 +136,11 @@ h1 {
    margin-top:8px;
 }
 
+.place img {
+	margin-top:-12px;
+	margin-left:-2px;
+}
+
 .point {
    background-color:lawngreen;
    opacity:0.0;
@@ -167,8 +172,8 @@ h1 {
 }
 
 #field img {
-   margin-left:105px;
-   margin-top:-2px;
+   margin-left:114px;
+   margin-top:-8px;
 }
 
 #dontPassBarHori {
@@ -181,6 +186,11 @@ h1 {
    margin-left:7px;
 }
 
+#dontPassBarHori img {
+	margin-left:83px;
+	margin-top:-17px;
+}
+
 #passLineHori {
    background-color:lawngreen;
    opacity:0.0;
@@ -188,6 +198,11 @@ h1 {
    width:361px;
    height:22px;
    margin-top:9px;
+}
+
+#passLineHori img {
+	margin-left:30px;
+	margin-top:-13px;
 }
 
 #passOdds {
@@ -198,6 +213,11 @@ h1 {
    height:75px;
    margin-left:29px;
    margin-top:14px;
+}
+
+#passOdds img {
+	margin-left:-5px;
+	margin-top:11px;
 }
 
 #anySeven {
@@ -211,8 +231,8 @@ h1 {
 }
 
 #anySeven img {
-   margin-left:103px;
-   margin-top:-12px;
+   margin-left:72px;
+   margin-top:-13px;
 }
 
 #hardWaySix {
@@ -225,6 +245,12 @@ h1 {
    margin-top:4px;
 }
 
+#hardWaySix img {
+	margin-left:28px;
+	margin-top:-5px;
+}
+
+
 #hardWayTen {
    background-color:lawngreen;
    opacity:0.0;
@@ -233,6 +259,11 @@ h1 {
    height:38px;
    margin-left:4px;
    margin-top:4px;
+}
+
+#hardWayTen img {
+	margin-left:28px;
+	margin-top:-5px;
 }
 
 #hardWayEight {
@@ -245,6 +276,11 @@ h1 {
    margin-top:3px;
 }
 
+#hardWayEight img {
+	margin-left:28px;
+	margin-top:-5px;
+}
+
 #hardWayFour {
    background-color:lawngreen;
    opacity:0.0;
@@ -255,6 +291,11 @@ h1 {
    margin-top:3px;
 }
 
+#hardWayFour img {
+	margin-left:28px;
+	margin-top:-5px;
+}
+
 #dontPassOdds {
    background-color:blue;
    opacity:0.0;
@@ -263,6 +304,11 @@ h1 {
    height:75px;
    margin-left:345px;
    margin-top:-103px;
+}
+
+#dontPassOdds img {
+	margin-left:-5px;
+	margin-top:11px;
 }
 
 #aceDeuce {
@@ -276,8 +322,8 @@ h1 {
 }
 
 #aceDeuce img {
-	margin-left:30px;
-	margin-top:-1px;
+	margin-left:12px;
+	margin-top:-6px;
 }
 
 #snakeEyes {
@@ -291,8 +337,8 @@ h1 {
 }
 
 #snakeEyes img {
-	margin-left:19px;
-	margin-top:-1px;
+	margin-left:9px;
+	margin-top:-6px;
 }
 
 #boxcars {
@@ -306,8 +352,8 @@ h1 {
 }
 
 #boxcars img {
-	margin-left:22px;
-	margin-top:-1px;
+	margin-left:10px;
+	margin-top:-6px;
 }
 
 #yoLeft {
@@ -321,8 +367,8 @@ h1 {
 }
 
 #yoLeft img {
-	margin-left:47px;
-	margin-top:2px;
+	margin-left:30px;
+	margin-top:-4px;
 }
 
 #yoRight {
@@ -336,8 +382,8 @@ h1 {
 }
 
 #yoRight img {
-	margin-left:47px;
-	margin-top:2px;
+	margin-left:29px;
+	margin-top:-5px;
 }
 
 #anyCraps {
@@ -351,8 +397,8 @@ h1 {
 }
 
 #anyCraps img {
-	margin-left:118px;
-	margin-top:-9px;
+	margin-left:84px;
+	margin-top:-11px;
 }
 
 #message {
