--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,6 +81,17 @@ h1 {
    display: none;
 }
 
+#pointChip {
+	display:inline-block;
+	background-color:#548347;
+	width:405px;
+	height:34px;
+}
+
+#pointChipImg {
+	margin-left:10px;
+}
+
 /* board css */
 
 #gameBoard {
@@ -126,6 +137,11 @@ h1 {
    margin-top:8px;
 }
 
+#dontComeBar img {
+	margin-left:-5px;
+	margin-top:15px;
+}
+
 .place {
    background-color:lawngreen;
    opacity:0.0;
@@ -151,6 +167,10 @@ h1 {
    margin-top:4px;
 }
 
+.point img {
+	margin-left:-2px;
+}
+
 #come {
    background-color:lawngreen;
    opacity:0.0;
@@ -159,6 +179,11 @@ h1 {
    height:43px;
    margin-left:3px;
    margin-top:3px;
+}
+
+#come img {
+	margin-left:-4px;
+	margin-top:-4px;
 }
 
 #field {
