--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -482,7 +482,9 @@ h1 {
    cursor: pointer;
    width: 172px;
    height: 60px;
-   background-image: url('/images/RollButton.gif');
+   background-image: url('/images/RollButton.png');
+   background-color:black;
+   border:black;
    background-size: contain;
    background-repeat: no-repeat;
    filter: url("data:image/svg+xml;utf8,&lt;svg xmlns=\'http://www.w3.org/2000/svg\'&gt;&lt;filter id=\'grayscale\'&gt;&lt;feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale");
